Fix horizontal css to enable horizontal scroll bar for Stocks table

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,5 +30,5 @@ app-news {
 app-stock-table {
     min-height: 500px;
     height: auto;
-    padding: 10px 0;
+    padding: 5px 0;
 }
