--- a/src/app/components/stock-table/stock-table.component.scss
+++ b/src/app/components/stock-table/stock-table.component.scss
@@ -1,105 +1,116 @@
-        .table-container {
-            width: 70vw;
-        }
-        
-        .mat-row {
-            height: auto;
-        }
-        
-        .mat-cell,
-        .mat-header-cell {
-            display: table-cell;
-            width: 100%;
-        }
-        
-        .mat-row,
-        .mat-header-row {
-            display: table-row;
-        }
-        
-         ::ng-deep .mat-sort-header-content {
-            text-align: right !important;
-        }
-        
-        table {
-            table-layout: fixed;
-            word-break: break-all;
-            word-wrap: break-word;
-        }
-        
-        .mat-header-cell {
-            font-size: 11px;
-            margin-right: 4px;
-            width: 72px;
-            flex: 1;
-            justify-content: flex-end;
-            align-items: flex-end;
-            text-align: end;
-        }
-        
-        th.mat-header-cell,
-        td.mat-cell,
-        td.mat-footer-cell {
-            font-size: 11px;
-            line-height: 1.3;
-            border-bottom-style: none;
-        }
-        
-        mat-cell:first-child,
-        mat-footer-cell:first-child,
-        mat-header-cell:first-child {
-            padding-left: 24px !important;
-            text-align: left;
-        }
-        
-        .footer-align-right {
-            display: flex;
-            padding-top: 12px;
-            padding-left: 24px;
-            justify-content: flex-start;
-        }
-        
-        .mat-cell {
-            font-size: 11px;
-            margin-right: 4px;
-            width: 66px;
-            flex: 1;
-            font-size: 11px;
-            text-align: right;
-        }
-        
-        #postMarketGainFooter {
-            padding-right: 24px;
-        }
-        
-        .mat-column-total,
-        .mat-column-totalCost,
-        .mat-column-profit {
-            flex: none;
-            width: 90px;
-        }
-        
-        .stock-flex {
-            display: flex;
-            line-height: 1.2;
-            margin-bottom: 5px;
-        }
-        
-        .stock-name {
-            min-width: 120px;
-            font-size: 11px;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            max-width: 1px;
-            text-align: left;
-        }
-        
-        .stock-details-bold {
-            font-weight: bolder;
-            margin-right: 4px;
-            min-width: 0;
-            flex: 1;
-            font-size: 11px;
-            text-align: right;
-        }
+.table-container {
+    display: block;
+    width: 100%;
+    overflow-x: auto
+}
+
+.mat-table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    display: table;
+    border-collapse: collapse;
+    margin: 0px;
+}
+
+.mat-row {
+    height: auto;
+}
+
+.mat-cell,
+.mat-header-cell {
+    display: table-cell;
+    width: 100%;
+}
+
+.mat-row,
+.mat-header-row {
+    display: table-row;
+}
+
+ ::ng-deep .mat-sort-header-content {
+    text-align: right !important;
+}
+
+table {
+    table-layout: fixed;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+
+.mat-header-cell {
+    font-size: 11px;
+    margin-right: 4px;
+    width: 72px;
+    flex: 1;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: end;
+}
+
+th.mat-header-cell,
+td.mat-cell,
+td.mat-footer-cell {
+    font-size: 11px;
+    line-height: 1.3;
+    border-bottom-style: none;
+}
+
+mat-cell:first-child,
+mat-footer-cell:first-child,
+mat-header-cell:first-child {
+    padding-left: 24px !important;
+    text-align: left;
+}
+
+.footer-align-right {
+    display: flex;
+    padding-top: 12px;
+    padding-left: 24px;
+    justify-content: flex-start;
+}
+
+.mat-cell {
+    font-size: 11px;
+    margin-right: 4px;
+    width: 66px;
+    flex: 1;
+    font-size: 11px;
+    text-align: right;
+}
+
+#postMarketGainFooter {
+    padding-right: 24px;
+}
+
+.mat-column-total,
+.mat-column-totalCost,
+.mat-column-profit {
+    flex: none;
+    width: 90px;
+}
+
+.stock-flex {
+    display: flex;
+    line-height: 1.2;
+    margin-bottom: 5px;
+}
+
+.stock-name {
+    min-width: 120px;
+    font-size: 11px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 1px;
+    text-align: left;
+}
+
+.stock-details-bold {
+    font-weight: bolder;
+    margin-right: 4px;
+    min-width: 0;
+    flex: 1;
+    font-size: 11px;
+    text-align: right;
+}
